--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.3.0.201903130848-r'
     implementation 'com.beust:klaxon:5.0.1'
     implementation "com.charleskorn.kaml:kaml:0.11.0"
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.12'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
