--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     implementation "com.charleskorn.kaml:kaml:0.11.0"
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.12'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    // https://mvnrepository.com/artifact/org.antlr/antlr4-runtime
+    compile group: 'org.antlr', name: 'antlr4-runtime', version: '4.7.2'
 }
 
 compileKotlin {
