--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
-    ext.ktor_version = '1.2.1'
-    ext.kotlin_version = '1.3.31'
+    ext.ktor_version = '1.6.0'
+    ext.kotlin_version = '1.5.10'
     
 }
 
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.31'
+    id 'org.jetbrains.kotlin.jvm' version '1.5.10'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
     id 'antlr'
 }
 
@@ -17,20 +18,23 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    jcenter()
-    maven { url "http://kotlin.bintray.org/ktor" }
+    maven {
+        name="jGit repo"
+        url="https://repo.eclipse.org/content/groups/releases/"
+    }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile "io.ktor:ktor-server-netty:$ktor_version"
-    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.3.0.201903130848-r'
-    implementation 'com.beust:klaxon:5.0.1'
-    implementation "com.charleskorn.kaml:kaml:0.11.0"
-    implementation group: 'commons-codec', name: 'commons-codec', version: '1.12'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "io.ktor:ktor-server-netty:$ktor_version"
+    implementation "ch.qos.logback:logback-classic:1.2.3"
+    implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.11.1.202105131744-r'
+    implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit.ssh.apache', version: '5.11.1.202105131744-r'
+    implementation 'com.beust:klaxon:5.5'
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 
-    antlr "org.antlr:antlr4:4.7.2"
+    antlr "org.antlr:antlr4:4.9.2"
 }
 
 compileKotlin {
